--- a/styles.css
+++ b/styles.css
@@ -339,7 +339,7 @@ h2 {
         background-size: cover;
         /* min-height: auto; */
         justify-content: center;
-        background-image: url(/pattern-bg.svg);
+        background-image: url(pattern-bg.svg);
         display: block;
     }
 
@@ -395,7 +395,7 @@ h2 {
         min-height: 174vh;
         position: absolute;
         z-index: 15;
-        background: url(/download.jpg);
+        background: url(download.jpg);
         margin: -174vh auto 0 auto;
         opacity: 0.7;
         background-repeat: no-repeat;
@@ -494,7 +494,7 @@ h2 {
         min-height: 174vh;
         position: absolute;
         z-index: 15;
-        background: url(/download.jpg);
+        background: url(download.jpg);
         margin: -174vh auto 0 auto;
         opacity: 0.7;
         background-repeat: no-repeat;
@@ -536,7 +536,7 @@ h2 {
         background-size: cover;
         /* min-height: auto; */
         justify-content: center;
-        background-image: url(/pattern-bg.svg);
+        background-image: url(pattern-bg.svg);
         display: block;
     }
 
@@ -592,7 +592,7 @@ h2 {
         min-height: 174vh;
         position: absolute;
         z-index: 15;
-        background: url(/download.jpg);
+        background: url(download.jpg);
         margin: -174vh auto 0 auto;
         opacity: 0.7;
         background-repeat: no-repeat;
@@ -667,7 +667,7 @@ h2 {
         min-height: 174vh;
         position: absolute;
         z-index: 15;
-        background: url(/download.jpg);
+        background: url(download.jpg);
         margin: -174vh auto 0 auto;
         opacity: 0.7;
         background-repeat: no-repeat;
@@ -708,7 +708,7 @@ h2 {
         min-height: 174vh;
         position: absolute;
         z-index: 15;
-        background: url(/download.jpg);
+        background: url(download.jpg);
         margin: -174vh auto 0 auto;
         opacity: 0.7;
         background-repeat: no-repeat;
@@ -913,6 +913,7 @@ h2 {
 @media (max-width:497px) {
     .border {
         margin: 1em 1em;
+        min-height: 680px;
     }
 
     .content1 {
@@ -931,7 +932,7 @@ h2 {
     .content1b {
         align-items: center;
         justify-content: center;
-        margin: 2em 1em;
+        margin: 6em 1em;
         font-size: 0.7em;
         padding: 0.9em 2.6em;
     }
@@ -951,7 +952,7 @@ h2 {
 
     .iphone {
         width: 10em;
-        margin-top: -1.5em;
+        margin-top: 5.5em;
         height: 10em;
     }
 
