--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,50 @@ body {
     z-index: 10;
 }
 
+.IU {
+    opacity: 0;
+    transition: 2000ms;
+    transform: translateX(100px);
+}
 
+.IU1 {
+    opacity: 0;
+    transition: 2000ms;
+    transform: translateX(-100px);
+}
+
+.IU2 {
+    opacity: 0;
+    transition: 2000ms;
+    transform: translateY(-100px);
+}
+
+.IU3 {
+    opacity: 0;
+    transition: 2000ms;
+    /* transform-origin: center; */
+    transform: rotate(90deg) translate(-50px);
+}
+
+.IU.show-1 {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.IU1.show-2 {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.IU2.show-3 {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.IU3.show-4 {
+    opacity: 1;
+    transform: rotate(0) translate(0);
+}
 .active {
     box-shadow: 0 0 3px #111;
     border-bottom: 1px #111;
